fixed alignment of plus icon

--- a/app/js/components/incident/incidentSummary/_incident-summary.scss
+++ b/app/js/components/incident/incidentSummary/_incident-summary.scss
@@ -61,3 +61,7 @@
     }
   }
 }
+
+.incident-summary .cell .icon-inline {
+  > * + * { margin-left: $global-padding/2; }
+}
